# gitlib

hlibgit2/: default.nix  hlibgit2.cabal  libgit.nix  shell.nix
hlibgit2/Bindings/Libgit2/: AnnotatedCommit.hsc  Apply.hsc  Attr.hsc  Attr.hsc.helper.c  Blame.hsc  Blob.hsc  Branch.hsc  Buffer.hsc  Cert.hsc  Checkout.hsc  Cherrypick.hsc  Clone.hsc  Commit.hsc  Common.hsc  Config.hsc  Credential.hsc  CredentialHelpers.hsc  Describe.hsc  Diff.hsc  Errors.hsc  Experimental.hsc  Filter.hsc  Global.hsc  Graph.hsc  Ignore.hsc  Index.hsc  Indexer.hsc  Mailmap.hsc  Merge.hsc  Message.hsc  Net.hsc  Notes.hsc  Object.hsc  Odb.hsc  OdbBackend.hsc  Oid.hsc  Oidarray.hsc  Pack.hsc  Patch.hsc  Pathspec.hsc  (+25 more)
