Name:                hlibgit2
Version:             1.7.1.0
Synopsis:            Low-level bindings to libgit2
Description:         Bindings to libgit2 v1.7.1.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley, Sakari Jokinen, Jacob Stanleyyeah,
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI

-- Extra-source-files: -- TODO
--   libgit2/deps/http-parser/*.h
--   libgit2/include/git2.h
--   libgit2/include/git2/*.h
--   libgit2/src/*.h
--   libgit2/src/hash/*.h
--   libgit2/src/transports/*.h
--   libgit2/src/unix/*.h
--   libgit2/src/win32/*.h
--   libgit2/src/xdiff/*.h
--   libgit2/COPYING

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  if os(linux)
    ghc-options: -optl-pthread
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , hlibgit2
    , process
  build-tools:
    git

Library
  hs-source-dirs: .
  ghc-options: -Wall
  default-language: Haskell98
  default-extensions:
    ForeignFunctionInterface
  build-depends:
      base            >= 3 && < 5
    , bindings-DSL    >= 1.0.11
    , zlib            >= 0.5.4

  exposed-modules:
    Bindings.Libgit2
    Bindings.Libgit2.AnnotatedCommit
    Bindings.Libgit2.Apply
    Bindings.Libgit2.Attr
    Bindings.Libgit2.Blame
    Bindings.Libgit2.Blob
    Bindings.Libgit2.Branch
    Bindings.Libgit2.Buffer
    Bindings.Libgit2.Cert
    Bindings.Libgit2.Checkout
    Bindings.Libgit2.Cherrypick
    Bindings.Libgit2.Clone
    Bindings.Libgit2.Commit
    Bindings.Libgit2.Common
    Bindings.Libgit2.Config
    Bindings.Libgit2.CredentialHelpers
    Bindings.Libgit2.Credential
    Bindings.Libgit2.Describe
    Bindings.Libgit2.Diff
    --Bindings.Libgit2.Email
    Bindings.Libgit2.Errors
    Bindings.Libgit2.Experimental
    Bindings.Libgit2.Filter
    Bindings.Libgit2.Global
    Bindings.Libgit2.Graph
    Bindings.Libgit2.Ignore
    Bindings.Libgit2.Indexer
    Bindings.Libgit2.Index
    Bindings.Libgit2.Mailmap
    Bindings.Libgit2.Merge
    Bindings.Libgit2.Message
    Bindings.Libgit2.Net
    Bindings.Libgit2.Notes
    Bindings.Libgit2.Object
    Bindings.Libgit2.OdbBackend
    Bindings.Libgit2.Odb
    Bindings.Libgit2.Oidarray
    Bindings.Libgit2.Oid
    Bindings.Libgit2.Pack
    Bindings.Libgit2.Patch
    Bindings.Libgit2.Pathspec
    Bindings.Libgit2.Proxy
    Bindings.Libgit2.Rebase
    Bindings.Libgit2.Refdb
    Bindings.Libgit2.Reflog
    Bindings.Libgit2.Refs
    Bindings.Libgit2.Refspec
    Bindings.Libgit2.Remote
    Bindings.Libgit2.Repository
    Bindings.Libgit2.Reset
    Bindings.Libgit2.Revert
    Bindings.Libgit2.Revparse
    Bindings.Libgit2.Revwalk
    Bindings.Libgit2.Signature
    Bindings.Libgit2.Stash
    Bindings.Libgit2.Status
    Bindings.Libgit2.Stdint
    Bindings.Libgit2.Strarray
    Bindings.Libgit2.Submodule
    Bindings.Libgit2.Tag
    Bindings.Libgit2.Trace
    Bindings.Libgit2.Transaction
    Bindings.Libgit2.Transport
    Bindings.Libgit2.Tree
    Bindings.Libgit2.Types
    Bindings.Libgit2.Version
    --Bindings.Libgit2.Worktree

  include-dirs:
    libgit2/build/include
  extra-lib-dirs:
    ${pkgroot}/libgit2/build/lib

  cc-options: -DGIT_THREADS -D_FILE_OFFSET_BITS=64 -DGIT_SSL -Wno-format -Wno-format-security -Wno-incompatible-pointer-types
  if os(windows)
    cpp-options: -DWINDOWS
    cc-options: -DGIT_WIN32 -DWIN32 -DWIN32_SHA1 -D_DEBUG -D_WIN32_WINNT=0x0501 -DGIT_WINHTTP
    c-sources:
      libgit2/src/util/win32/posix_w32.c
      libgit2/src/util/win32/process.c
      libgit2/src/util/win32/error.c
      libgit2/src/util/win32/path_w32.c
      libgit2/src/util/win32/map.c
      libgit2/src/util/win32/utf-conv.c
      libgit2/src/util/win32/thread.c
      libgit2/src/util/win32/dir.c
      libgit2/src/util/win32/w32_buffer.c
      libgit2/src/util/win32/w32_leakcheck.c
      libgit2/src/util/win32/w32_util.c
      libgit2/src/util/win32/precompiled.c
      libgit2/src/util/hash/win32.c
    include-dirs:
      libgit2/src/util/win32
    extra-libraries:
      ws2_32, regex, winhttp, crypt32, rpcrt4, ssl, crypto
  else
    cc-options: -D_GNU_SOURCE -DOPENSSL_SHA1 -Wno-deprecated-declarations
    if os(darwin)
      c-sources:
        libgit2/src/util/hash/common_crypto.c
      include-dirs: 
        /usr/local/opt/openssl/include
      extra-lib-dirs: 
        /usr/local/opt/openssl/lib
    extra-libraries:
      ssl, crypto, pthread
